fix: avoid horizontal scrollbar on the CIFEX login page whenever the loginHeader.html is not empty by setting the width of the style to 99% (instead of 100%)
SVN: 16127

--- a/cifex/source/java/ch/systemsx/cisd/cifex/public/css/cifex.css
+++ b/cifex/source/java/ch/systemsx/cisd/cifex/public/css/cifex.css
@@ -48,7 +48,7 @@ body, div, td, table td, select {
 
 .cifex-login-header {
   position: absolute;
-  width: 100%;
+  width: 99%;
   top: 10;
   left: 10;
   right: 10;
